# ArticleImage-Generation

./: .gitattributes  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirement.md  requirements.txt
static/css/: output.css  style.css
templates/: generateimg.html  hello.html  index.html
